# lux

./: .clang-format  .gersemirc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  codecov.yml
.devcontainer/ubuntu-24.04/: devcontainer.json
.github/: copilot-instructions.md
.github/agents/: EXAMPLES.md  README.md  test-generator.agent.md  test-generator.md
.github/workflows/: ci.yml
cmake/: CFlex.cmake  LuxSourceGroup.cmake  SourceGroup.cmake
cmake/build_options/: clang.cmake  gcc.cmake  msvc.cmake
cmake/kl/: CodeCoverage.cmake  SourceGroup.cmake
cmake/toolchain/: clang.cmake  gcc-arm64-cross.cmake  gcc.cmake  msvc.cmake
include/lux/: fwd.hpp  lux.hpp
include/lux/crypto/: cert.hpp  container.hpp  key.hpp
include/lux/io/: coro.hpp  promise.hpp
include/lux/io/coro/: algorithms.hpp  awaitable_deadline.hpp  awaitable_event.hpp  common.hpp  timeout_awaitable.hpp
include/lux/io/net/: http_app.hpp  http_client.hpp  http_client_app.hpp  http_factory.hpp  http_router.hpp  http_server.hpp  http_server_app.hpp  socket_factory.hpp  tcp_acceptor.hpp  tcp_inbound_socket.hpp  tcp_socket.hpp  udp_socket.hpp
include/lux/io/net/base/: address_v4.hpp  endpoint.hpp  http_client.hpp  http_factory.hpp  http_method.hpp  http_request.hpp  http_response.hpp  http_server.hpp  http_status.hpp  socket_config.hpp  socket_factory.hpp  ssl.hpp  tcp_acceptor.hpp  tcp_socket.hpp  udp_socket.hpp
include/lux/io/proc/: process.hpp  process_factory.hpp
include/lux/io/proc/base/: process.hpp  process_factory.hpp
include/lux/io/time/: delayed_retry_executor.hpp  interval_timer.hpp  retry_executor.hpp  timer_factory.hpp
include/lux/io/time/base/: retry_policy.hpp  timer.hpp
include/lux/logger/: log_level.hpp  logger.hpp  logger_factory.hpp  logger_manager.hpp
include/lux/net/: socket_factory.hpp  udp_socket.hpp
include/lux/net/base/: address_v4.hpp  endpoint.hpp  socket_factory.hpp  tcp_acceptor.hpp  tcp_socket.hpp  udp_socket.hpp
include/lux/support/: assert.hpp  concepts.hpp  container.hpp  enum.hpp  exception.hpp  finally.hpp  hash.hpp  macros.hpp  move.hpp  overload.hpp  path.hpp  result.hpp  scoped_value.hpp  strong_typedef.hpp
include/lux/utils/: buffer_reader.hpp  buffer_writer.hpp  expiring_ref.hpp  lifetime_guard.hpp  memory_arena.hpp  platform.hpp  random_bytes.hpp  stopwatch.hpp  string_chain.hpp
src/: CMakeLists.txt  lux.cpp
src/lux/crypto/: cert.cpp  key.cpp
src/lux/crypto/detail/: openssl_utils.cpp  openssl_utils.hpp
src/lux/io/net/: http_app.cpp  http_client.cpp  http_client_app.cpp  http_factory.cpp  http_router.cpp  http_server.cpp  http_server_app.cpp  socket_factory.cpp  tcp_acceptor.cpp  tcp_inbound_socket.cpp  tcp_socket.cpp  udp_socket.cpp
src/lux/io/net/detail/: http_parser.hpp  utils.hpp
src/lux/io/proc/: process.cpp  process_factory.cpp
src/lux/io/time/: delayed_retry_executor.cpp  retry_executor.cpp
src/lux/logger/: log_level.cpp  logger_manager.cpp
src/lux/net/: socket_factory.cpp  udp_socket.cpp
src/lux/support/: path.cpp
src/lux/utils/: platform.cpp
test/: CMakeLists.txt  finally_test.cpp  logger_test.cpp  lux_test.cpp  test_case.hpp
test/crypto/: cert_test.cpp  key_test.cpp
test/io/: coro_test.cpp  promise_test.cpp
test/io/coro/: algorithms_test.cpp  awaitable_deadline_test.cpp  awaitable_event_test.cpp  timeout_awaitable_test.cpp
test/io/net/: address_v4_test.cpp  endpoint_test.cpp  http_app_test.cpp  http_client_app_test.cpp  http_client_test.cpp  http_factory_test.cpp  http_router_test.cpp  http_server_app_test.cpp  http_server_test.cpp  socket_factory_test.cpp  tcp_acceptor_test.cpp  tcp_inbound_socket_test.cpp  tcp_socket_test.cpp  test_utils.hpp  udp_socket_test.cpp
test/io/proc/: process_factory_test.cpp  process_test.cpp  process_test_helper.cpp
test/io/time/: delayed_retry_executor_test.cpp  interval_timer_test.cpp  retry_executor_test.cpp  timer_factory_test.cpp
test/io/time/mocks/: interval_timer_mock.hpp  timer_factory_mock.hpp
test/logger/: logger_test.cpp
test/net/: address_v4_test.cpp  endpoint_test.cpp  socket_factory_test.cpp  udp_socket_test.cpp
test/support/: container_test.cpp  enum_test.cpp  exception_test.cpp  expiring_ref_test.cpp  finally_test.cpp  hash_test.cpp  lifetime_guard_test.cpp  move_test.cpp  path_test.cpp  result_test.cpp  scoped_value_test.cpp  strong_typedef_test.cpp
test/utils/: buffer_reader_test.cpp  buffer_writer_test.cpp  expiring_ref_test.cpp  lifetime_guard_test.cpp  memory_arena_test.cpp  platform_test.cpp  random_bytes_test.cpp  stopwatch_test.cpp  string_chain_test.cpp
